--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -1,37 +1,40 @@
 <div class="container">
-<form class="form item">
+<form class="form item" #checkoutForm="ngForm">
   <mat-form-field class="form__element">
-    <input matInput placeholder="Name" required [(ngModel)] = "model.name" name="name" #name="ngModel">
+    <input matInput placeholder="Nombre" required [(ngModel)] = "model.name" name="name" #name="ngModel">
     <mat-error *ngIf=" !name.valid || name.pristine">
-      Name is required
+      Nombre requerido
     </mat-error>
   </mat-form-field>
   <mat-radio-group class="form__element">
-    <p>Choose a option:</p>
+    <p>Elije una opcion:</p>
     <mat-radio-button value="pickup"(change)="onPickupOrDelivery(false)"> Pickup </mat-radio-button>
-    <mat-radio-button value="delivery" (change)="onPickupOrDelivery(true)"> Delivery </mat-radio-button>
+    <mat-radio-button value="delivery" (change)="onPickupOrDelivery(true)" checked=""> Delivery </mat-radio-button>
   </mat-radio-group>
-
-  <mat-form-field class="form__element">
-    <input matInput placeholder="Shipping Address" [(ngModel)]="model.shippingAddress" name="shippingAddress" #shippingAddress="ngModel">
-  </mat-form-field>
-  <mat-form-field class="form__element">
-    <input matInput placeholder="City" [(ngModel)]="model.city" name="city" #city="ngModel">
-  </mat-form-field>
-  <mat-form-field class="form__element">
-    <mat-label>Select me</mat-label>
-    <mat-select name="store" #store="ngModel" [(ngModel)]="model.store">
-      <mat-option [value]="tienda" *ngFor="let tienda of stores">
-        {{tienda.name}} - {{tienda.openingHours}}
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
+  <ng-container *ngIf="isDelivery; else showStores">
+    <mat-form-field class="form__element">
+      <input matInput placeholder="Direccion de envio" [(ngModel)]="model.shippingAddress" name="shippingAddress" #shippingAddress="ngModel">
+    </mat-form-field>
+    <mat-form-field class="form__element">
+      <input matInput placeholder="Ciudad" [(ngModel)]="model.city" name="city" #city="ngModel">
+    </mat-form-field>
+  </ng-container>
+  <ng-template #showStores>
+    <mat-form-field class="form__element">
+      <mat-label>Selecciona uno</mat-label>
+      <mat-select name="store" #store="ngModel" [(ngModel)]="model.store">
+        <mat-option [value]="tienda" *ngFor="let tienda of stores">
+          {{tienda.name}} - {{tienda.openingHours}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </ng-template>
 </form>
 
 </div>
 <app-details></app-details>
 <div class="container__button">
 
-<button [disabled]="" mat-raised-button color="primary" type="submit"> Checkout </button>
+<button [disabled]="" mat-raised-button color="primary" type="submit" (click)="onSubmit(checkoutForm)"> Comprar </button>
 
 </div>
