--- a/src/app/pages/products/product/product.component.html
+++ b/src/app/pages/products/product/product.component.html
@@ -4,8 +4,8 @@
 </mat-card-header>
    <mat-card-content> {{product.description}}    </mat-card-content>
   <mat-card-actions>
-  <button mat-flat-button color="primary" (click)="onClick()">
-    Buy {{ product.price | currency}}
+  <button mat-flat-button color="primary" (click)="onClick()" [disabled]="product.stock === 0">
+    Comprar {{ product.price | currency}}
     <mat-icon>add_shopping_cart</mat-icon>
   </button>
 
